--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,72 @@ body{
     background-color: #f5f5f5;
 }
 /*Initial style use anywhere*/
+.bc-card-white{
+    background-color: white;
+}
+.bc-blue-card{
+    background-color: rgba(84, 144, 245, 0.2);
+}
+.bc-blue-btn{
+    background-color: rgba(84, 144, 245, 1);
+    color: white;
+}
+.bc-green-card{
+    background-color: #C6E4D6;
+}
+.bc-green-btn{
+    background-color: #09A15C;
+    color: white;
+}
+.bc-yellow-card{
+    background-color: #F7EBCF;
+}
+.bc-yellow-btn{
+    background-color: #FFC239;
+    color: white;
+}
+
+
 
 /*default button style*/
 .btn{
     padding: 15px 30px;
     font-weight: 600;
-    font-size: 18px;
-    color: #006A50;
+    font-size: 16px;
     border: none;
     border-radius: 8px;
     margin: 24px 0;
+    width: fit-content;
 }
 .container{
     width: 80%;
     max-width: 1280px;
     margin: 0 auto;
+}
+
+.card{
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+}
+.card img{
+    margin-bottom: 24px;
+    max-width: 64px;
+}
+.card h2{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 12px;
+    color: rgba(14, 14, 14, 0.8);
+}
+.card p{
+    font-size: 16px;
+    margin-bottom: 12px;
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
 }
 
 
@@ -90,29 +141,55 @@ main{
     gap: 24px;
 }
 
-.pillars-of-bd-parent .card-parent .card{
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    border-radius: 16px;
-    border: 1px solid rgba(14, 14, 14, 0.15);
-    background-color: white;
-}
-.pillars-of-bd-parent .card-parent .card img{
-    margin-bottom: 24px;
-    max-width: 64px;
-}
-.pillars-of-bd-parent .card-parent .card h2{
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 12px;
-    color: rgba(14, 14, 14, 0.8);
+#vision{
+    margin-top: 80px;
 }
 
-.pillars-of-bd-parent .card-parent .card p{
+#vision .vision-header{
+    font-size: 40px;
+    font-weight: 700;
+    color: #0E0E0E;
+    margin-bottom: 24px;
+}
+#vision p{
     font-size: 16px;
-    margin-bottom: 12px;
     line-height: 24px;
     color: rgba(14, 14, 14, 0.7);
+    margin-bottom: 32px;
+}
+#vision .vision-card{
+    display: flex;
+    gap: 24px;
+    margin-bottom: 32px;
+}
+#vision .vision-card .card{
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#vision .vision-card .card img{
+    max-width: 64px;
+}
+#vision .vision-qoute{
+    padding: 48px 24px;
+    background-color: white;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    position:relative;
+
+}
+#vision .vision-qoute p{
+    margin-bottom: 12px;
+}
+#vision .vision-qoute h2{
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 4px;
+    color: rgba(14, 14, 14, 0.8);
+}
+#vision .vision-qoute .fa-quote-left{
+    color: rgba(14, 14, 14, 0.15);
+    font-size: 64px;
+    position: absolute;
+    top: 23px;
+    left: 13px;
 }
