--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
 body{
     background-color: #f5f5f5;
 }
+
+/*margin for section*/
+#pillars ,#vision{
+    margin-top: 80px;
+}
+
 /*Initial style use anywhere*/
 .bc-card-white{
     background-color: white;
@@ -125,9 +131,6 @@ main{
 /*banner-hero section end*/
 
 /*pillars of bangladesh*/
-.pillars-of-bd-parent{
-    margin-top: 80px;
-}
 
 .pillars-tittle{
     font-size: 40px;
@@ -141,9 +144,6 @@ main{
     gap: 24px;
 }
 
-#vision{
-    margin-top: 80px;
-}
 
 #vision .vision-header{
     font-size: 40px;
