--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 /*margin for section*/
-#pillars ,#vision ,#opinion,#news{
+#pillars ,#vision ,#opinion,#news,#donate,#subscribe,footer{
     margin-top: 80px;
 }
 
@@ -144,7 +144,7 @@ main{
     gap: 24px;
 }
 
-
+/*vision */
 #vision .vision-header{
     font-size: 40px;
     font-weight: 700;
@@ -194,6 +194,7 @@ main{
     left: 13px;
 }
 
+/*Opinion*/
 #opinion .form-tittle{
     color: #0E0E0E;
     font-size: 40px;
@@ -217,7 +218,6 @@ main{
     font-weight: 600;
     color: #0E0E0E;
 }
-
 #opinion form .form-question{
     display: flex;
     align-items: center;
@@ -247,7 +247,7 @@ main{
     background-color: transparent;
 }
 
-
+/*News*/
 #news h2{
     font-size: 40px;
     font-weight: 700;
@@ -300,4 +300,112 @@ main{
 }
 #news .news-card:nth-child(4){
     flex-direction: row-reverse;
+}
+
+/*donate part*/
+#donate{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#donate h2{
+    font-size: 40px;
+    color: #0E0E0E;
+    margin-bottom: 24px;
+}
+#donate p{
+    padding: 0 88px;
+    text-align: center;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 32px;
+    color: rgba(14, 14, 14, 0.7);
+}
+#donate .donate-card{
+    display: flex;
+    gap: 24px;
+    margin-bottom: 32px;
+}
+#donate .donate-card .card{
+    align-items: center;
+    flex: none;
+}
+#donate .donate-card h2{
+    font-size: 40px;
+    font-weight: 700;
+    color: rgba(14, 14, 14, 0.8);
+    margin-bottom: 0;
+}
+#donate input{
+    padding: 20px 388px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+    margin-bottom: 32px;
+}
+#donate button{
+    margin-bottom: 0;
+}
+
+/*subscribe*/
+#subscribe{
+    padding: 80px 100px;
+    background-color: #C6E4D6;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#subscribe h2{
+    font-size: 40px;
+    font-weight: 700;
+    color: #0E0E0E;
+    margin-bottom: 16px;
+}
+#subscribe p{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    max-width: 622px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+#subscribe .subscribe-btn input{
+    padding: 18px 403px 18px 40px;
+    border: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+#subscribe .subscribe-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+}
+#subscribe .subscribe-btn button{
+    border-radius: 0px 8px 8px 0;
+}
+
+/*footer */
+footer{
+    padding: 50px 160px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+footer h2{
+    font-size: 32px;
+    color: #0E0E0E;
+    margin-bottom: 32px;
+}
+footer .line{
+    width: 1122px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    margin-bottom: 32px;
+}
+footer .footer-icon{
+    display: flex;
+    align-items: center;
+    gap: 23px;
 }
